--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "node-xlsx": "^0.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
